src/snapshots/Tugboat__ui__tests__draw_ui_context_mode_snapshot.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"                                                                                "
" ┌Docker Containers───────────────────────────────────────────────────────────┐ "
" │ID             Image           Status         Names           IP            │ "
" │id1            img1            running        name1           127.0.0.1     │ "
" │id2            img2            exited         name2           127.0.0.2     │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                          ┌Actions───────────────┐                          │ "
" │                          │>> Logs               │                          │ "
" │                          │   Stats              │                          │ "
" │                          └──────────────────────┘                          │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
