src/snapshots/Tugboat__ui__tests__draw_ui_log_mode_snapshot.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"                                                                                "
" ┌Docker Containers───────────────────────────────────────────────────────────┐ "
" │ID    ┌Logs - img1───────────────────────────────────────────────────┐      │ "
" │id1   │log_line                                                      ▲1     │ "
" │id2   │log_line                                                      ║2     │ "
" │      │log_line                                                      ║      │ "
" │      │log_line                                                      █      │ "
" │      │log_line                                                      █      │ "
" │      │log_line                                                      █      │ "
" │      │log_line                                                      ║      │ "
" │      │log_line                                                      ║      │ "
" │      │log_line                                                      ║      │ "
" │      │log_line                                                      ║      │ "
" │      │log_line                                                      ║      │ "
" │      │log_line                                                      ║      │ "
" │      │log_line                                                      ║      │ "
" │      │log_line                                                      ▼      │ "
" │      └──────────────────────────────────────────────────────────────┘      │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
