src/snapshots/Tugboat__ui__tests__draw_ui_search_logs_mode_snapshot.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"                                                                                "
" ┌Docker Containers───────────────────────────────────────────────────────────┐ "
" │ID    ┌Logs - img1───────────────────────────────────────────────────┐      │ "
" │id1   │[log]_line                                                    ▲1     │ "
" │id2   │[log]_line                                                    ║2     │ "
" │      │[log]_line                                                    ║      │ "
" │      │[log]_line                                                    █      │ "
" │      │[log]_line                                                    █      │ "
" │      │[log]_line                                                    █      │ "
" │      │[log]_line                                                    ║      │ "
" │      │[log]_line                                                    ║      │ "
" │      │[log]_line                                                    ║      │ "
" │      │[log]_line                                                    ║      │ "
" │      │[log]_line                                                    ║      │ "
" │      │[log]_line                                                    ║      │ "
" │      ┌Search────────────────────────────────────────────────────────┐      │ "
" │      │/log                                                          │      │ "
" │      └──────────────────────────────────────────────────────────────┘      │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
