src/snapshots/Tugboat__ui__tests__draw_ui_stats_mode_snapshot.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"                                                                                "
" ┌Docker Containers───────────────────────────────────────────────────────────┐ "
" │ID    ┌Resource Usage────────────────────────────────────────────────┐      │ "
" │id1   │   40.00│CPU %                               ⢀⣀⣀⣀⠤⠤⠤⠤⠒⠒⠒⠒⠉⠉   │1     │ "
" │id2   │        │                     ⣀⣀⣀⣀⠤⠤⠤⠤⠒⠒⠒⠊⠉⠉⠉⠁                │2     │ "
" │      │   20.00│      ⣀⣀⣀⣀⠤⠤⠤⠔⠒⠒⠒⠊⠉⠉⠉                                │      │ "
" │      │        │⠒⠒⠉⠉⠉⠉                                               │      │ "
" │      │   0.0  │                                          Time (s)   │      │ "
" │      │        └──────────────────────────────────────────────────   │      │ "
" │      │        1                                                10   │      │ "
" │      │   32.00│Memory %                              ⣀⣀⣀⡠⠤⠤⠤⠒⠒⠒⠉⠉   │      │ "
" │      │        │                         ⣀⣀⣀⡠⠤⠤⠔⠒⠒⠒⠉⠉⠉               │      │ "
" │      │   16.00│            ⣀⣀⣀⠤⠤⠤⠔⠒⠒⠊⠉⠉⠉                            │      │ "
" │      │        │⣀⣀⠤⠤⠤⠒⠒⠒⠊⠉⠉⠉                                         │      │ "
" │      │   0.0  │                                          Time (s)   │      │ "
" │      │        └──────────────────────────────────────────────────   │      │ "
" │      │        1                                                10   │      │ "
" │      └──────────────────────────────────────────────────────────────┘      │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
